test_yuriiq/catalog/language/german/account/register.php
<?php

// text
$_['text_account']	= 'Konto';
$_['text_your_details']	= 'Persönliche Angaben';
$_['text_agree']	= 'Ich habe die <a class="fancybox" href="%s" alt="%s"><b>%s</b></a> gelesen und verstanden.';
$_['text_account_already']	= 'Wenn Sie bereits ein Konto für diesen Shop besitzen, melden Sie sich bitte <a href="%s">hier</a> an.';
$_['text_your_address']	= 'Ihre Adresse';
$_['text_your_password']	= 'Passwort';
$_['text_newsletter']	= 'Newsletter';
$_['text_register']	= 'Neues Konto anlegen';

// error
$_['error_country']	= 'Bitte wählen Sie ein Land!';
$_['error_password']	= 'Das Passwort muss zwischen 4 und 20 Zeichen lang sein!';
$_['error_exists']	= 'Warnung: Email-Adresse ist bereits registriert!';
$_['error_vat']	= 'MwSt-Nummer ist ungültig!';
$_['error_tax_id']	= 'Steuer-ID erforderlich!';
$_['error_firstname']	= 'Vorname muss zwischen 1 und 32 Zeichen lang sein!';
$_['error_email']	= 'Elektronische Adresse ist ungültig!';
$_['error_confirm']	= 'Passwort ein und bestätigen Passwort stimmen nicht überein!';
$_['error_city']	= 'Stadt muss zwischen 2 und 128 Zeichen!';
$_['error_postcode']	= 'Postleitzahl muss zwischen 2 und 10 Zeichen lang sein!';
$_['error_company']	= 'Erfordert den Namen des Unternehmens!';
$_['error_telephone']	= 'Telefon muss zwischen 3 und 32 Zeichen lang sein!';
$_['error_lastname']	= 'Nachname muss zwischen 1 und 32 Zeichen lang sein!';
$_['error_address_1']	= 'Adresse muss zwischen 3 und 128 Zeichen lang sein!';
$_['error_zone']	= 'Bitte wählen Sie eine Region / Staat!';
$_['error_agree']	= 'Achtung: Sie müssen mit dem %s zustimmen!';
$_['error_company_id']	= 'Firmen-ID erforderlich!';

// entry
$_['entry_firstname']	= 'Vorname:';
$_['entry_password']	= 'Passwort:';
$_['entry_customer_group']	= 'Business-Typ:';
$_['entry_city']	= 'Stadt:';
$_['entry_fax']	= 'Fax:';
$_['entry_postcode']	= 'Postleitzahl:';
$_['entry_newsletter']	= 'Zeichnen:';
$_['entry_email']	= 'Email:';
$_['entry_address_1']	= 'Adresszeile:';
$_['entry_address_2']	= 'Adresszeile 2:';
$_['entry_confirm']	= 'Passwort bestätigen:';
$_['entry_telephone']	= 'Telefon:';
$_['entry_company_id']	= 'Firmen-ID:';
$_['entry_tax_id']	= 'Steuer-ID:';
$_['entry_zone']	= 'Bundesland:';
$_['entry_lastname']	= 'Nachname:';
$_['entry_company']	= 'Firma:';
$_['entry_country']	= 'Land:';

// heading
$_['heading_title']	= 'Neues Konto anlegen';
?>